--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,15 @@ user.password2=Repeat
 user.error.exists=User already exists
 user.error.password.no_match=Repeated password must be the same
 
+question.category.create=Dodaj now¹ kategoriê pytan
+question.category.error.exist=Ta kategoria pytan ju¿ istnieje
+question.category.name=Nazwa kategorii
+question.category.list=Kategorie pytan
+
+question.error=Wystapil blad
+question.create=Stworz nowe pytanie
+question.text=Tresc pytania
+
 NotEmpty=Required
 Size.form.id=ID must be no more than {1} characters
 Size.form.password1=Password must be no more than {1} characters
