Change add question form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,6 +18,8 @@ question.error=Wystapil blad
 question.create=Stworz nowe pytanie
 question.text=Tresc pytania
 
-NotEmpty=Required
+question.anserwsNumber=Podaj ilosc odpowiedzi
+
+NotEmpty=To pole jest wymagane
 Size.form.id=ID must be no more than {1} characters
 Size.form.password1=Password must be no more than {1} characters
