Marged with master branch.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,7 +9,7 @@ user.password2=Repeat
 user.error.exists=User already exists
 user.error.password.no_match=Repeated password must be the same
 
-question.category.create=Dodaj now¹ kategoriê pytan
+question.category.create=Dodaj nowa kategorie pytan
 question.category.error.exist=Ta kategoria pytan ju¿ istnieje
 question.category.name=Nazwa kategorii
 question.category.list=Kategorie pytan
